--- a/Beranda.html
+++ b/Beranda.html
@@ -31,7 +31,7 @@
         <h1>Dashboard</h1>
         <input type="text" placeholder="Search">
         <div class="user-info">   <div class="profile-image">
-          <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
+          <a href="/profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
         </div></div>
       </header>
 
