--- a/html/level_html.html
+++ b/html/level_html.html
@@ -11,10 +11,10 @@
     <aside class="sidebar">
       <header>Main Menu</header>
       <ul>
-        <li><a href="dasboard_soal.html">Kembali</a></li>
+        <li><a href="/dasboard_soal.html">Kembali</a></li>
       </ul>
       <div class="zapier-integration">
-        <button>Connect</button>
+        <button><a href="/index.html" class="logout-link">Logout</a></button>
       </div>
     </aside>
 
@@ -22,7 +22,7 @@
       <header class="topbar">
         <h1>Hypertext markup language</h1>
         <div class="user-info"><div class="profile-image">
-          <a href="profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
+          <a href="/profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
         </div></div>
       </header>
 
