--- a/soal_css/level_css.html
+++ b/soal_css/level_css.html
@@ -11,7 +11,7 @@
     <aside class="sidebar">
       <header>TechPath</header>
       <ul>
-        <li><a href="../dasboard_soal.html">Kembali</a></li>
+        <li><a href="/dasboard_soal.html">Kembali</a></li>
       </ul>
       <div class="zapier-integration">
         <div class="zapier-integration">
@@ -24,7 +24,7 @@
         <h1>Quiz title</h1>
         <input type="text" placeholder="Search">
         <div class="user-info"><div class="profile-image">
-          <a href="profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
+          <a href="/profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
         </div></div>
       </header>
 
