--- a/Materi.html
+++ b/Materi.html
@@ -25,7 +25,7 @@
       <header class="topbar">
         <input type="text" placeholder="Search">
         <div class="user-info"><div class="profile-image">
-          <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
+          <a href="/profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
         </div></div>
       </header>
 
