--- a/dasboard_soal.html
+++ b/dasboard_soal.html
@@ -15,7 +15,7 @@
       </ul>
       <div class="zapier-integration">
         <div class="zapier-integration">
-          <button><a href="index.html" class="logout-link">Logout</a></button>
+          <button><a href="/index.html" class="logout-link">Logout</a></button>
         </div>
       </div>
     </aside>
@@ -24,7 +24,7 @@
         <h1>Quiz Dashboard</h1>
         <input type="text" placeholder="Search">
         <div class="user-info"><div class="profile-image">
-          <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
+          <a href="/profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
         </div></div>
       </header>
       <section class="quiz-list">
