--- a/html/soal_html.html
+++ b/html/soal_html.html
@@ -16,7 +16,7 @@
         <li><a href="level_html.html">Dashboard</a></li>
       </ul>
       <div class="zapier-integration">
-        <button>Connect</button>
+        <button><a href="/index.html" class="logout-link">Logout</a></button>
       </div>
     </aside>
 
@@ -24,7 +24,7 @@
       <header class="topbar">
         <h1>Quiz Title</h1>
         <div class="user-info"><div class="profile-image">
-          <a href="profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
+          <a href="/profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
         </div></div>
       </header>
       <section class="quiz-layout">
