--- a/profil.html
+++ b/profil.html
@@ -25,7 +25,7 @@
   /* Sidebar Styles */
   .sidebar {
     width: 250px;
-    background-color: #696fec;
+    background-color: #1e203d;
     color: white;
     padding: 1rem;
     display: flex;
@@ -59,7 +59,7 @@
   }
 
   .sidebar ul li a:hover {
-    background-color: #2c3e50;
+    background-color: #696fec;
     color: #ecf0f1;
   }
 
@@ -70,7 +70,7 @@
 
   .zapier-integration button {
     padding: 0.5rem 1rem;
-    background-color: #2c3e50;
+    background-color: #1e203d;
     border: none;
     color: white;
     border-radius: 4px;
@@ -79,7 +79,7 @@
   }
 
   .zapier-integration button:hover {
-    background-color: #1a242f;
+    background-color: #696fec;
   }
 
   /* Main Content Styles */
