--- a/login.html
+++ b/login.html
@@ -240,7 +240,7 @@
                 <h3>I accept terms & conditions</h3>
             </div>
             <div class="input-box button">
-                <input type="submit" value="Login Now">
+                <input type="submit" value="Login Now" onclick="window.location.href='Beranda.html';">
             </div>
             <div class="text">
                 <h3>Don't have an account? <a href="register.html" style="text-decoration: none;"><span>Register Now</span></a></h3>
