--- a/register.html
+++ b/register.html
@@ -249,7 +249,7 @@
                 <h3>I accept terms & conditions</h3>
             </div>
             <div class="input-box button">
-                <input type="submit" value="Register Now">
+                <input type="submit" value="Register Now" onclick="window.location.href='login.html';">
             </div>
             <div class="text">
                 <h3>Already have an account? <a href="login.html" style="text-decoration: none;"><span>Login Now</span></a></h3>
