--- a/profil.html
+++ b/profil.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard - Profil Saya</title>
+  <title>Profil Saya</title>
   <link rel="stylesheet" href="css/beranda.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
