--- a/profil.html
+++ b/profil.html
@@ -7,224 +7,332 @@
   <title>Profil Saya</title>
   <link rel="stylesheet" href="css/beranda.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    /* General Styles */
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Helvetica Neue', sans-serif;
+      background-color: #f0f2f5;
+      display: flex;
+      min-height: 100vh;
+    }
+
+    .dashboard-container {
+      display: flex;
+      width: 100%;
+      min-height: 100vh;
+      transition: margin-left 0.3s;
+    }
+
+    /* Sidebar Styles */
+    .sidebar {
+      width: 250px;
+      background-color: #1e203d;
+      color: white;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      transition: width 0.3s ease-in-out;
+    }
+
+    .sidebar.closed {
+      width: 0;
+      display: none;
+    }
+
+    .sidebar header {
+      font-size: 1.5rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .sidebar ul li {
+      margin: 1rem 0;
+    }
+
+    .sidebar ul li a {
+      color: white;
+      text-decoration: none;
+      padding: 0.5rem;
+      display: block;
+      border-radius: 4px;
+      transition: background 0.3s ease, color 0.3s ease;
+    }
+
+    .sidebar ul li a:hover {
+      background-color: #696fec;
+      color: #ecf0f1;
+    }
+
+    .zapier-integration {
+      margin-top: auto;
+      text-align: center;
+    }
+
+    .zapier-integration button {
+      padding: 0.5rem 1rem;
+      background-color: #1e203d;
+      border: none;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .zapier-integration button:hover {
+      background-color: #696fec;
+    }
+
+    /* Main Content Styles */
+    .main-content {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      padding: 2rem;
+      box-sizing: border-box;
+      overflow: auto;
+    }
+
+    .topbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      margin-bottom: 2rem;
+      width: 100%;
+      box-sizing: border-box;
+      flex-wrap: wrap;
+    }
+
+    .topbar h1 {
+      font-size: 1.5rem;
+      color: #34495e;
+      flex-grow: 1;
+      margin: 0;
+    }
+
+    .topbar input {
+      width: 40%;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .topbar .menu-toggle {
+      display: none;
+      background: none;
+      border: none;
+      color: #34495e;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+
+    .user-info {
+      font-size: 1rem;
+      font-weight: bold;
+      color: #34495e;
+      display: flex;
+      align-items: center;
+    }
+
+    /* Profile Image */
+    .profile-image {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 3px solid #fff;
+      background-color: #ddd;
+      overflow: hidden;
+    }
+
+    .profile-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    /* Profile Section */
+    .profile-header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    .profile-header h2 {
+      color: #34495e;
+      font-size: 1.8rem;
+      margin: 0;
+      margin-left: 1rem;
+    }
+
+    .profile-header button {
+      padding: 0.5rem 1rem;
+      background-color: #696fec;
+      border: none;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background 0.3s ease;
+    }
+
+    .profile-header button:hover {
+      background-color: #2c3e50;
+    }
+
+    .status-indicator {
+      display: flex;
+      align-items: center;
+      margin-left: 1rem;
+    }
+
+    .status-indicator span {
+      margin-left: 0.5rem;
+      font-weight: bold;
+      font-size: 1rem;
+      color: #7f8c8d;
+    }
+
+    .status-indicator .active {
+      color: green;
+    }
+
+    .status-indicator .offline {
+      color: red;
+    }
+
+    .profile-details {
+      background-color: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin-bottom: 2rem;
+    }
+
+    .profile-details .detail-item {
+      margin-bottom: 1rem;
+    }
+
+    .profile-details .detail-item span {
+      font-weight: bold;
+      color: #34495e;
+    }
+
+    .profile-details .detail-item p {
+      margin: 0.5rem 0 0;
+      color: #7f8c8d;
+    }
+
+    /* Footer Styles */
+    .footer {
+      text-align: center;
+      margin-top: 2rem;
+      padding: 1rem;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    .footer p {
+      margin: 0;
+      color: #7f8c8d;
+    }
+    
+    .logout-link {
+      color: white;
+      text-decoration: none;
+    }
+
+    /* Media Queries for Responsiveness */
+    @media (max-width: 1024px) {
+      .topbar h1 {
+        font-size: 1.3rem;
+      }
+
+      .topbar input {
+        width: 50%;
+      }
+
+      .sidebar {
+        width: 200px;
+      }
+
+      .profile-image {
+        width: 60px;
+        height: 60px;
+      }
+
+      .profile-header h2 {
+        font-size: 1.5rem;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .sidebar {
+        width: 0;
+        display: none;
+      }
+
+      .topbar .menu-toggle {
+        display: block;
+      }
+
+      .topbar input {
+        width: 60%;
+      }
+
+      .profile-header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .profile-image {
+        width: 40px;
+        height: 40px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .topbar {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .topbar input {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
+
+      .profile-header h2 {
+        font-size: 1.3rem;
+      }
+
+      .footer p {
+        font-size: 0.9rem;
+      }
+
+      .sidebar.open {
+        display: block;
+        width: 250px;
+      }
+    }
+  </style>
 </head>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Helvetica Neue', sans-serif;
-    background-color: #f0f2f5;
-    display: flex;
-  }
-
-  .dashboard-container {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-  }
-
-  /* Sidebar Styles */
-  .sidebar {
-    width: 250px;
-    background-color: #1e203d;
-    color: white;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    transition: width 0.3s;
-  }
-
-  .sidebar header {
-    font-size: 1.5rem;
-    margin-bottom: 1.5rem;
-    text-align: center;
-  }
-
-  .sidebar ul {
-    list-style: none;
-    padding: 0;
-  }
-
-  .sidebar ul li {
-    margin: 1rem 0;
-  }
-
-  .sidebar ul li a {
-    color: white;
-    text-decoration: none;
-    padding: 0.5rem;
-    display: block;
-    border-radius: 4px;
-    transition: background 0.3s ease, color 0.3s ease;
-  }
-
-  .sidebar ul li a:hover {
-    background-color: #696fec;
-    color: #ecf0f1;
-  }
-
-  .zapier-integration {
-    margin-top: auto;
-    text-align: center;
-  }
-
-  .zapier-integration button {
-    padding: 0.5rem 1rem;
-    background-color: #1e203d;
-    border: none;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-  }
-
-  .zapier-integration button:hover {
-    background-color: #696fec;
-  }
-
-  /* Main Content Styles */
-  .main-content {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    padding: 2rem;
-    box-sizing: border-box;
-    overflow: auto;
-  }
-
-  .topbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 2rem;
-  }
-
-  .topbar h1 {
-    font-size: 1.5rem;
-    color: #34495e;
-  }
-
-  .topbar input {
-    width: 40%;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-
-  .user-info {
-    font-size: 1rem;
-    font-weight: bold;
-    color: #34495e;
-  }
-
-  /* Profile Section */
-  .profile-header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2rem;
-  }
-
-  .profile-header h2 {
-    color: #34495e;
-    font-size: 1.8rem;
-    margin: 0;
-    margin-left: 1rem;
-  }
-
-  .profile-header button {
-    padding: 0.5rem 1rem;
-    background-color: #696fec;
-    border: none;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background 0.3s ease;
-  }
-
-  .profile-header button:hover {
-    background-color: #2c3e50;
-  }
-
-  .profile-image {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    border: 3px solid #fff;
-    background-color: #ddd;
-    overflow: hidden;
-  }
-
-  .profile-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .status-indicator {
-    display: flex;
-    align-items: center;
-    margin-left: 1rem;
-  }
-
-  .status-indicator span {
-    margin-left: 0.5rem;
-    font-weight: bold;
-    font-size: 1rem;
-    color: #7f8c8d;
-  }
-
-  .status-indicator .active {
-    color: green;
-  }
-
-  .status-indicator .offline {
-    color: red;
-  }
-
-  .profile-details {
-    background-color: white;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 2rem;
-  }
-
-  .profile-details .detail-item {
-    margin-bottom: 1rem;
-  }
-
-  .profile-details .detail-item span {
-    font-weight: bold;
-    color: #34495e;
-  }
-
-  .profile-details .detail-item p {
-    margin: 0.5rem 0 0;
-    color: #7f8c8d;
-  }
-
-  /* Footer Styles */
-  .footer {
-    text-align: center;
-    margin-top: 2rem;
-    padding: 1rem;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    box-sizing: border-box;
-  }
-
-  .footer p {
-    margin: 0;
-    color: #7f8c8d;
-  }
-</style>
 
 <body>
   <div class="dashboard-container">
@@ -235,12 +343,12 @@
         <li><a href="settings.html">Settings</a></li>
       </ul>
       <div class="zapier-integration">
-        <div class="zapier-integration">
-          <button><a href="index.html" class="logout-link">Logout</a></button>
-        </div>
+        <button><a href="index.html" class="logout-link">Logout</a></button>
+      </div>
     </aside>
     <div class="main-content">
       <header class="topbar">
+        <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
         <h1>Profil Saya</h1>
       </header>
 
@@ -248,7 +356,7 @@
         <div class="profile-image">
           <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
         </div>
-        <h2>Welcome, John Doe!</h2>
+        <h2>Welcome, Nama!</h2>
         <div class="status-indicator">
           <span class="active">Active</span>
         </div>
@@ -278,94 +386,13 @@
       </footer>
     </div>
   </div>
-  <script>
 
-    const ctx1 = document.getElementById('potentialChart').getContext('2d');
-  const potentialChart = new Chart(ctx1, {
-    type: 'bar',
-    data: {
-      labels: ['HTML', 'PHP', 'CSS', 'JS'],
-      datasets: [{
-        label: 'Potential',
-        data: [0, 0, 0, 0],
-        backgroundColor: ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0']
-      }]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: {
-          position: 'top',
-        },
-        title: {
-          display: true,
-          text: 'Individual Potential'
-        }
-      },
-      scales: {
-        y: {
-          beginAtZero: true
-        }
-      }
+  <script>
+    function toggleSidebar() {
+      const sidebar = document.querySelector('.sidebar');
+      sidebar.classList.toggle('open');
     }
-  });
-  
-  const ctx2 = document.getElementById('skillPotentialChart').getContext('2d');
-  const skillPotentialChart = new Chart(ctx2, {
-    type: 'line',
-    data: {
-      labels: ['January', 'February', 'March', 'April', 'May'],
-      datasets: [
-        {
-          label: 'HTML',
-          data: [2, 3, 2.5, 4, 5],
-          fill: false,
-          borderColor: '#FF6384',
-          tension: 0.1
-        },
-        {
-          label: 'CSS',
-          data: [1, 2, 1.5, 2, 3],
-          fill: false,
-          borderColor: '#36A2EB',
-          tension: 0.1
-        },
-        {
-          label: 'PHP',
-          data: [2, 3, 3.5, 4, 5],
-          fill: false,
-          borderColor: '#FFCE56',
-          tension: 0.1
-        },
-        {
-          label: 'JavaScript',
-          data: [3, 3.5, 4, 4.5, 5],
-          fill: false,
-          borderColor: '#4BC0C0',
-          tension: 0.1
-        }
-      ]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: {
-          position: 'top',
-        },
-        title: {
-          display: true,
-          text: 'Skill Potential Over Time'
-        }
-      },
-      scales: {
-        y: {
-          beginAtZero: true
-        }
-      }
-    }
-  });
-  
   </script>
-  </body>
-  
-  </html>
+</body>
+
+</html>
